feat: tautan atau linkpage

--- a/public/scss/pages/Tautan.module.scss
+++ b/public/scss/pages/Tautan.module.scss
@@ -1,56 +1,44 @@
-@import "../base/colors.scss";
-@import "../components/Button.module.scss";
+@import '../utils/variables';
 
 .tautan
 {
   text-align: center;
-  margin: 50px 0;
+  padding: 50px 18px;
 
   &_logo
   {
-    height: 80px;
+    height: 30px;
+    margin-bottom: 50px;
   }
 
   &_title
   {
-    font-size: 22px;
-    font-family: "roboto-medium";
+    @include typographyBuilder(primary, 500, 20, 32);
+    color: $color_text_primary;
+    margin-bottom: 12px;
   }
 
   &_description
   {
-    font-size: 14px;
-    margin-bottom: 100px;
+    @include typographyBuilder(secondary, 400, 14, 24);
+    color: $color_text_primary;
+    margin-bottom: 24px;
   }
 
   &_linkSection
   {
-    display: flex;
-    align-items: center;
-    flex-direction: row-reverse;
-    width: 100%;
-    margin: 16px 0;
-    padding: 13.5px;
-    background: $color_white;
-    border: 1px solid $color_blue;
-    box-sizing: border-box;
-    box-shadow: 0px 4px 10px rgba($color_black, 0.1);
-    border-radius: 3px;
+    @include flex(row-reverse, center);
+    @include fixedWidth(100%);
+    margin: 12px 0;
+    padding: 13.5px 16px;
+    border-radius: 50px;
+    border: 1px solid $color_rose;
     cursor: pointer;
 
     &:hover,
     &:active
     {
       transition: 0.5s all ease;
-      background: $color_blue;
-
-      .tautan_labelText
-      {
-        & > p
-        {
-          color: $color_white !important;
-        }
-      }
     }
   }
 
@@ -60,7 +48,7 @@
     
     & > p
     {
-      font-size: 14px;
+      @include typographyBuilder(secondary, 400, 14, 24);
       text-align: left;
       margin: 0;
     }
@@ -69,12 +57,12 @@
   &_labelImage
   {
     flex: 0 1 auto;
-    margin-right: 10px;
+    margin-right: 16px;
 
     img
     {
-      width: 21px;
-      height: 21px;
+      @include fixedWidth(21px);
+      @include fixedHeight(21px);
       object-fit: cover;
     }
   }
