--- a/public/scss/pages/Account.module.scss
+++ b/public/scss/pages/Account.module.scss
@@ -139,7 +139,19 @@
 
   &_progress
   {
+    border-radius: 6px;
     width: 100%;
+    height: 7px;
+
+    &::-webkit-progress-bar {
+      border-radius: 6px;
+      background-color: $color_border;
+    }
+
+    &::-webkit-progress-value {
+      background-color: $color_rose;
+      border-radius: 6px;
+    }
   }
 }
 
