--- a/public/scss/components/Newsletter.module.scss
+++ b/public/scss/components/Newsletter.module.scss
@@ -1,23 +1,15 @@
-@import "../base/colors";
-@import "../components/Form.module.scss";
-@import "../components/Button.module.scss";
+@import "../utils/variables";
 
 .newsletter
 {
   &_overlay
   {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    @include fixed(0,0,0,0);
     background: rgba($color_black, 0.7);
     transition: opacity 500ms;
     opacity: 1;
     z-index: 10;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flex(row,flex-end,center);
 
     &:empty
     {
@@ -27,66 +19,47 @@
 
   &_popupContainer
   {
-    margin: 1rem;
-    padding: 2rem 1.5rem;
+    padding: 24px 16px;
     background: $color_white;
     border-radius: 4px;
-    width: 500px;
-    height: 500px;
+    @include fixedWidth(375px);
     position: relative;
     transition: all .3s ease-in-out;
     overflow-y: auto;
 
+    & > span 
+    {
+      display: grid;
+    }
+
     h1,h2,h3,h4,h5,h6
     {
-      font-family: "roboto-medium";
-      font-size: 24px;
+      @include typographyBuilder(secondary,500,20,24);
+      text-align: center;
+      margin: 8px 0 12px 0;
     }
 
     p
     {
-      font-size: 14px;
+      @include typographyBuilder(secondary,400,12,16);
+      text-align: center;
+      background-color: $color_rose_bg2;
+      padding: 12px;
     }
 
     img
     {
-      width: 100% !important;
-    }
-
-    @media screen and (max-width: 576px) {
-      width: 100%;
+      display: none;
     }
   }
 
   &_close
   {
-    position: absolute;
-    right: .5rem;
-    top: .5rem;
-    padding: 0;
+    margin-top: 12px;
+    grid-row: 3;
+    color: $color_rose;
     border: none;
-    background: none;
-    color: $color_white;
-
-    &:focus,
-    &:active
-    {
-      outline: 0;
-    }
-
-    i
-    {
-      span
-      {
-        font-family: "roboto-medium";
-        text-transform: lowercase;
-        margin-left: .5rem;
-      }
-    }
-  }
-
-  &_form
-  {
-    margin-top: 1rem;
+    background-color: $color_white;
+    padding: 11.5px 0;
   }
 }
