feat: new style newsletter

--- a/public/scss/components/Newsletter.module.scss
+++ b/public/scss/components/Newsletter.module.scss
@@ -45,6 +45,7 @@
       text-align: center;
       background-color: $color_rose_bg2;
       padding: 12px;
+      margin-bottom: 24px;
     }
 
     img
