--- a/public/scss/components/CartDetail.module.scss
+++ b/public/scss/components/CartDetail.module.scss
@@ -6,6 +6,8 @@
   {
     padding-left: 15px;
     padding-right: 15px;
+    height: calc(100vh - 265px);
+    overflow-y: auto;
   }
 
   &_breadcrumb
