--- a/public/scss/pages/ResetPassword.module.scss
+++ b/public/scss/pages/ResetPassword.module.scss
@@ -1,55 +1,21 @@
-@import "../base/colors.scss";
-@import "../components/Button.module.scss";
-@import "../components/Form.module.scss";
-@import "../components/Password.module.scss";
+@import '../utils/variables';
 
 .resetPassword
 {
+  padding: 0 17px;
+
   &_container
   {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 5rem;
-    min-height: 60vh;
-
-    @media screen and (max-width: 768px) {
-      min-height: 72.5vh;
-    }
-
-    @media screen and (max-width: 576px) {
-      min-height: 65vh;
-    }
-  }
-
-  &_inner
-  {
-    width: 500px;
-    padding: 2rem;
-    align-content: center;
-
-    @media screen and (max-width: 576px) {
-      width: 100%;
-      padding: 2rem 1.5rem;
-    }
-
-    &_title
-    { 
-      & > span
-      {
-        font-size: 14px;
-        color: $color_gray_semi_dark;
-      }
-    }
-  }
-
-  &_innerForm
-  {
-    margin-top: 2rem;
+    position: relative;
   }
 
   &_error
   {
-    margin: 1rem 0;
-    color: $color_red;
+    @include absolute(auto,0,-32px,0);
+    text-align: center;
+    @include typographyBuilder(secondary,400,12,16);
+    color: $color_error;
+    grid-column: 1/span 2;
+    margin: 0;
   }
 }
