fixed: clean code

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,6 +1,5 @@
 @import '~bootstrap/scss/bootstrap.scss';
-@import './base/all.scss';
-@import 'uno.scss';
+@import 'rose.scss';
 @import './utils/variables.scss';
 @import './utils/scrollbar.scss';
 
