--- a/public/scss/pages/ResetPassword.module.scss
+++ b/public/scss/pages/ResetPassword.module.scss
@@ -1,7 +1,4 @@
-@import "../base/colors.scss";
-@import "../components/Button.module.scss";
-@import "../components/Form.module.scss";
-@import "../components/Password.module.scss";
+@import "../utils/variables";
 
 .resetPassword
 {
@@ -10,15 +7,6 @@
     display: flex;
     justify-content: center;
     margin-bottom: 5rem;
-    min-height: 60vh;
-
-    @media screen and (max-width: 768px) {
-      min-height: 72.5vh;
-    }
-
-    @media screen and (max-width: 576px) {
-      min-height: 65vh;
-    }
   }
 
   &_inner
@@ -27,17 +15,12 @@
     padding: 2rem;
     align-content: center;
 
-    @media screen and (max-width: 576px) {
-      width: 100%;
-      padding: 2rem 1.5rem;
-    }
-
     &_title
     { 
       & > span
       {
         font-size: 14px;
-        color: $color_gray_semi_dark;
+        color: $color_text_secondary;
       }
     }
   }
@@ -50,6 +33,6 @@
   &_error
   {
     margin: 1rem 0;
-    color: $color_red;
+    color: $color_error;
   }
 }
