--- a/public/scss/pages/PaymentMethod.module.scss
+++ b/public/scss/pages/PaymentMethod.module.scss
@@ -1,10 +1,4 @@
-@import '../base/colors';
 @import '../utils/variables';
-@import '../components/CustomerDetail.module.scss';
-@import '../components/Button.module.scss';
-@import '../components/Form.module.scss';
-@import '../components/OrderSummary.module.scss';
-@import '../components/Popup.module.scss';
 
 .payment
 {
@@ -117,7 +111,7 @@
 
     &__button
     {
-      background: $color_blue;
+      background: $color_rose;
       color: $color_white;
       height: calc(2em + 1rem + 4px);
       border-color: $color_border !important;
@@ -192,7 +186,7 @@
       display: block;
       width: 100%;
       padding: 0 1rem;
-      color: $color_red;
+      color: $color_error;
       font-size: 14px;
     }
   }
@@ -324,68 +318,33 @@
     }
   }
 
-  &_empty
-  {
-    padding: 2rem 0;
-    text-align: center;
-
-    &__icon
-    {
-      width: 3rem !important;
-      height: 3rem !important;
-    }
-
-    &__title
-    {
-      font-family: "roboto-medium";
-      font-size: 1rem;
-      text-transform: uppercase;
-      margin: 1rem 0 .5rem 0;
-    }
-  }
-
   &_popupProcessOverlay
   {
-    position: fixed;
+    @include fixed(0, auto, auto, 0);
+    @include fixedWidth(100%);
+    @include fixedHeight(100%);
+    @include flex(row, center, center);
     z-index: 10;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.25);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: rgba($color_black, 0.8);
   }
 
 
   &_popupProcessContainer
   {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    @media screen and (max-width: 991px) {
-      padding: 0 1rem;
-    }
+    @include position(relative);
+    @include flex(row, center, center);
   }
 
   &_popupProcessInner
   {
-    display: flex;
-    align-items: center;
-    width: max-content;
+    @include flex(row, center);
+    width: 100%;
     height: auto;
-    padding: 1.5rem;
+    padding: 16px;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 4px;
     background-color: $color_white;
-    box-shadow: 0 0 15px rgba(0,0,0,.15);
-
-    @media screen and (max-width: 991px) {
-      width: 100%;
-    }
+    box-shadow: 0 0 15px rgba($color_black, 0.15);
   }
 
   &_pointButton
@@ -421,7 +380,7 @@
 
   &_containerPointPopup
   {
-    position: relative;
+    @include position(relative);
     z-index: 10;
     padding: 15px 16px;
     background: $color_white;
@@ -429,12 +388,10 @@
 
     &__close
     {
-      position: absolute;
-      right: 0;
-      top: 0;
+      @include absolute(0, 0, auto, auto);
       background: transparent;
       border: none;
-      padding: .25rem .5rem;
+      padding: 4px 7.5px;
       cursor: pointer;
 
       &:focus,
