--- a/public/scss/pages/Products.module.scss
+++ b/public/scss/pages/Products.module.scss
@@ -1,4 +1,3 @@
-@import '../base/colors';
 @import '../utils/variables';
 
 .products
@@ -35,11 +34,9 @@
 
   &_action
   {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flex(row, center, center);
     position: fixed;
-    bottom: 3rem;
+    bottom: 32px;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
@@ -47,8 +44,7 @@
     &_sort,
     &_top
     {
-      display: flex;
-      align-items: center;
+      @include flex(row, center);
       padding: .5rem 1rem;
       border-radius: 34px;
       background: $color_blue;
