--- a/public/scss/components/Footer.module.scss
+++ b/public/scss/components/Footer.module.scss
@@ -8,6 +8,7 @@
   height: 100%;
   width: 100%;
   z-index: 10;
+
   &_nav
   {
     @include flex(row, center, space-evenly);
@@ -21,41 +22,44 @@
     {
       max-width: 100%;
     }
-  }
-  a 
-  {
-    height: 100%;
-    @include flex(column, center, flex-end);
-    text-decoration: none;
-    & > div
+  
+    & > a 
     {
-      @include flex(column);
-      @include typographyBuilder(secondary,400,10,12.1);
-      padding-top: 12px;
-      
-      & > svg
+      height: 100%;
+      color: $color_text_primary;
+      @include flex(column, center, flex-end);
+      text-decoration: none;
+
+      & > div
       {
-        width: 13.5px;
-        height: 14.05px;
+        @include flex(column);
+        @include typographyBuilder(secondary,400,10,12.1);
+        padding-top: 12px;
+        
+        & > svg
+        {
+          width: 13.5px;
+          height: 14.05px;
+        }
+        & > span 
+        {
+          margin-top: 6.25px;
+          margin-bottom: 12px;
+        }
+        & > hr 
+        {
+          opacity: 0;
+          margin: 0;
+          padding: 0;
+          background: $color_rose;
+          height: 2px;
+          width: 100%;
+        }
       }
-      & > span 
+      &:hover 
       {
-        margin-top: 6.25px;
-        margin-bottom: 12px;
+        color: $color_rose;
       }
-      & > hr 
-      {
-        opacity: 0;
-        margin: 0;
-        padding: 0;
-        background: $color_rose;
-        height: 2px;
-        width: 100%;
-      }
-    }
-    &:hover 
-    {
-      color: $color_rose;
     }
   }
 
