fix: homepage style - center title instagram feed - normal text for product tag

--- a/public/scss/components/InstagramFeed.module.scss
+++ b/public/scss/components/InstagramFeed.module.scss
@@ -23,7 +23,7 @@
       @include fixedWidth(100%);
       background: rgba($color_white, 0.8);
       border: none;
-      text-align: left;
+      text-align: center;
       padding: 12px;
 
       @include typographyBuilder(secondary, 400, 14, 24);
