--- a/public/scss/components/Form.module.scss
+++ b/public/scss/components/Form.module.scss
@@ -76,8 +76,8 @@
       url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDEyIDgiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGQ9Ik0xMC41IDEuNzVMNiA2LjI1TDEuNSAxLjc1IiBzdHJva2U9IiM5OTgwNjAiIHN0cm9rZS13aWR0aD0iMiIgc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIi8+Cjwvc3ZnPgo=),
       radial-gradient($color_rose_bg2 70%, transparent 72%);
     background-position:
-      calc(100% - 24px) calc(100% - 20px),
-      calc(100% - 12px) center;
+      right 24px center,
+      right 12px center;
     background-size:
       15px 15px,
       40px 40px;
