--- a/public/scss/components/Password.module.scss
+++ b/public/scss/components/Password.module.scss
@@ -5,25 +5,20 @@
 
   &_passwordContainer
   {
-    display: grid;
-    grid-template-columns: 80% 20%;
-
-    & > input 
-    {
-      grid-column: 1 / span 2;
-      grid-row: 1;
-    }
+    position: relative;
 
     & > button 
     {
+      padding: 0;
+      @include absolute(50%,12px);
+      top: 50%;  
+      transform: translate(0, -50%);
       color: $color_rose;
       width: 40px;
       height: 40px;
       align-self: center;
       justify-self: center;
       z-index: 2;
-      grid-column: 2;
-      grid-row: 1;
       background-color: $color_rose_bg2;
       border-radius: 30px;
       border: none;
