--- a/public/scss/components/Map.module.scss
+++ b/public/scss/components/Map.module.scss
@@ -66,9 +66,15 @@
 
   &_mapPopupClose
   {
+    @include absolute();
     border: none;
     background: none;
-    padding-right: 18px;
+    padding-right: 14px;
+
+    & > svg
+    {
+      color: $color_text_primary !important;
+    }
   }
 
   &_mapPopupMaps
@@ -134,6 +140,11 @@
     border: none;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
     border-radius: 2px;
+    
+    & > svg
+    {
+      color: $color_text_primary !important;
+    }
   }
 
   &_mapPopupLabelAddress
