Feat: Cari pesanan di order history

--- a/public/scss/pages/Login.module.scss
+++ b/public/scss/pages/Login.module.scss
@@ -117,6 +117,7 @@
 
     &_item
     {
+      @include flex(row, center, center);
       margin: 0 12px;
       border-radius: 50px !important;
       box-shadow: none;
