--- a/public/scss/components/Newsletter.module.scss
+++ b/public/scss/components/Newsletter.module.scss
@@ -8,7 +8,7 @@
     background: rgba($color_black, 0.7);
     transition: opacity 500ms;
     opacity: 1;
-    z-index: 10;
+    z-index: 20;
     @include flex(row,flex-end,center);
 
     &:empty
@@ -22,10 +22,15 @@
     padding: 24px 16px;
     background: $color_white;
     border-radius: 4px;
-    @include fixedWidth(375px);
+    @include fixedWidth(100vw);
     position: relative;
     transition: all .3s ease-in-out;
     overflow-y: auto;
+
+    @media screen and (min-width: #{$breakpoint_min_sm})
+    {
+      @include fixedWidth(375px);
+    }
 
     & > span 
     {
