--- a/public/scss/components/OrderHistory.module.scss
+++ b/public/scss/components/OrderHistory.module.scss
@@ -345,4 +345,109 @@
       color: $color_text_inactive;
     }
   }
+
+  &_searchOverlay
+  {
+    @include fixed(0,0,0,0);
+    background: rgba($color_black, 0.7);
+    transition: opacity 500ms;
+    opacity: 1;
+    z-index: 20;
+    @include flex(row,flex-end,center);
+  }
+
+  &_searchInner
+  {
+    padding: 24px 16px;
+    background: $color_white;
+    border-radius: 4px;
+    @include fixedWidth(100vw);
+    position: relative;
+    transition: all .3s ease-in-out;
+    overflow-y: auto;
+
+    @media screen and (min-width: #{$breakpoint_min_sm})
+    {
+      @include fixedWidth(375px);
+    }
+  }
+
+  &_searchHeader
+  {
+    @include flex(row, center, center);
+  }
+
+  &_searchHeaderTitle
+  {
+    @include typographyBuilder(secondary, 400, 20, 24);
+    color: $color_text_primary;
+  }
+
+  &_searchHeaderClose
+  {
+    @include absolute(16px, 16px);
+    z-index: 21;
+    padding: 0;
+    background: transparent;
+    border: none;
+    @include fixedHeight(20px);
+    @include fixedWidth(20px);
+    @include flex(row, center, center);
+
+    &:active,
+    &:focus
+    {
+      outline: 0;
+      box-shadow: none;
+      border: none;
+    }
+
+    & > svg
+    {
+      @include fixedHeight(20px);
+      @include fixedWidth(20px);
+    }
+  }
+
+  &_searchContent
+  {
+    margin: 24px 0 0;
+  }
+
+  &_searchDesc
+  {
+    @include typographyBuilder(secondary, 400, 12, 16);
+    color: $color_text_primary;
+    background: $color_rose_bg2;
+    border-radius: 2px;
+    padding: 12px;
+    text-align: center;
+    margin-bottom: 24px;
+  }
+
+  &_searchForm
+  {
+    margin: 0 0 12px;
+
+    input
+    {
+      padding-top: 10px !important;
+      color: $color_text_primary !important;
+      background: $color_white !important;
+    }
+  }
+
+  &_searchInputTitle
+  {
+    position: absolute;
+    z-index: 1;
+    color: $color_text_secondary;
+    padding: 9px 26px 0 26px;
+    @include typographyBuilder(secondary,500,10,16);
+  }
+
+  &_searchBtn
+  {
+    margin-top: 24px;
+  }
 }
